@@ -28,12 +28,6 @@ LOCAL_PKG_LIST="openssl ffmpeg freeglut sdl2"
 # (all other packages will provide shared libraries):
 STATIC_PKG_LIST="ffmpeg freeglut sdl2 x264"
 
-# Delete unpacked source files after successful build of the package (true/false):
-CLEAN_SRC_DIR=true
-
-# Delete files from "build/" sub-directory after successful build of the package (true/false):
-CLEAN_BUILD_DIR=true
-
 # Override or add extra settings:
 EXTRA_SETTINGS_FILE=$(ls "${MAIN_DIR}"/settings.sh.* 2> /dev/null | sort -V | tail -n1)
 [ ! -z "${EXTRA_SETTINGS_FILE}" ] && . "${EXTRA_SETTINGS_FILE}" || true
