@@ -2,6 +2,7 @@
 * Add new package: x264.
 * Add `make all` target: build all available packages.
 * Add `make download` target: download sources without build of packages.
+* Delete extra variables CLEAN_SRC_DIR and CLEAN_BUILD_DIR from settings file.
 * Improve GetSources() function: show error message if size of downloaded
   tarball is equal to zero. (Only checksum mismatch was shown earlier.)
 * Update packages:
